chore: remove vcard
vcard urls should be generated at some point by the backend.
collect details of the user like forename and surename. write a template
where the user information is fetched and shown.
