# backend/docs/swagger.json
@@ -2716,9 +2716,6 @@
                 "uuid": {
                     "type": "string",
                     "example": "60948703-fca9-4491-b3bc-588188d93eb3"
-                },
-                "vCardURL": {
-                    "type": "string"
                 }
             }
         },
@@ -3039,9 +3036,6 @@
                     "maxLength": 16,
                     "minLength": 3,
                     "example": "Bob"
-                },
-                "vCardURL": {
-                    "type": "string"
                 }
             }
         },
