# backend/ent/schema/user.go
@@ -21,7 +21,6 @@ func (User) Fields() []ent.Field {
 		field.String("username"),
 		field.String("password"),
 		field.String("ssoIdentifier").Optional(),
-		field.String("vCardURL").Optional(),
 		field.JSON("permissions", []string{}).Default([]string{}),
 		field.JSON("tags", []string{}).Default([]string{}),
 		field.Time("lastLogin").Optional(),
